<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.UserDetailFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="16dp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView_avatar"
                android:layout_width="120dp"
                android:layout_height="120dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:id="@+id/textView_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <androidx.cardview.widget.CardView
                android:id="@+id/layout_team_lead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="14dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/team_lead"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse" />
            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_margin="16dp"
                android:background="@color/cardview_dark_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/job_title"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textView_job_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:focusable="false"
                        android:gravity="top|left"
                        android:inputType="textMultiLine"
                        android:maxLines="100"
                        android:minLines="1"
                        android:scrollbars="vertical"
                        android:singleLine="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/first_name"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textView_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:focusable="false"
                        android:gravity="top|left"
                        android:inputType="textMultiLine"
                        android:maxLines="100"
                        android:minLines="1"
                        android:scrollbars="vertical"
                        android:singleLine="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/last_name"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textView_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:focusable="false"
                        android:gravity="top|left"
                        android:inputType="textMultiLine"
                        android:maxLines="100"
                        android:minLines="1"
                        android:scrollbars="vertical"
                        android:singleLine="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/employee_code"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textView_employee_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:focusable="false"
                        android:gravity="top|left"
                        android:inputType="textMultiLine"
                        android:maxLines="100"
                        android:minLines="1"
                        android:scrollbars="vertical"
                        android:singleLine="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/email"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textView_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:focusable="false"
                        android:gravity="top|left"
                        android:inputType="textMultiLine"
                        android:maxLines="100"
                        android:minLines="1"
                        android:scrollbars="vertical"
                        android:singleLine="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/phone_no"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textView_phone_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:focusable="false"
                        android:gravity="top|left"
                        android:inputType="textMultiLine"
                        android:maxLines="100"
                        android:minLines="1"
                        android:scrollbars="vertical"
                        android:singleLine="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/region"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textView_region"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:focusable="false"
                        android:gravity="top|left"
                        android:inputType="textMultiLine"
                        android:maxLines="100"
                        android:minLines="1"
                        android:scrollbars="vertical"
                        android:singleLine="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/user_id"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textView_user_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:focusable="false"
                        android:gravity="top|left"
                        android:inputType="textMultiLine"
                        android:maxLines="100"
                        android:minLines="1"
                        android:scrollbars="vertical"
                        android:singleLine="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/duties"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textView_duties"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:focusable="false"
                        android:gravity="top|left"
                        android:inputType="textMultiLine"
                        android:maxLines="100"
                        android:minLines="1"
                        android:scrollbars="vertical"
                        android:singleLine="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/report_to"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textView_report_to"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:focusable="false"
                        android:gravity="top|left"
                        android:inputType="textMultiLine"
                        android:maxLines="100"
                        android:minLines="1"
                        android:drawablePadding="8dp"
                        android:drawableRight="@drawable/ic_baseline_arrow_forward_24"
                        android:scrollbars="vertical"
                        android:singleLine="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:drawableEnd="@drawable/ic_baseline_arrow_forward_24" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</androidx.core.widget.NestedScrollView>